--- a/Lab3_Grzebyk_21236/package.json
+++ b/Lab3_Grzebyk_21236/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/BialaStrzala/Paula-Grzebyk-21236-J-wys-poz/issues"
   },
-  "homepage": "https://github.com/BialaStrzala/Paula-Grzebyk-21236-J-wys-poz#readme"
+  "homepage": "https://github.com/BialaStrzala/Paula-Grzebyk-21236-J-wys-poz#readme",
+  "dependencies": {
+    "linebyline": "^1.3.0",
+    "readline": "^1.3.0"
+  }
 }
